--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,20 @@
   "author": "MortredN",
   "license": "MIT",
   "private": "true",
+  "type": "module",
   "scripts": {
-    "start": "npx tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "migrate": "drizzle-kit generate && drizzle-kit migrate"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "drizzle-orm": "^0.32.1",
+    "express": "^4.19.2",
+    "mysql2": "^3.10.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "drizzle-kit": "^0.23.0",
     "typescript": "^5.5.3"
   }
 }
