--- a/server/package.json
+++ b/server/package.json
@@ -8,18 +8,25 @@
   "private": "true",
   "type": "module",
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "dev": "nodemon index.ts",
+    "build": "tsc",
     "migrate": "drizzle-kit generate && drizzle-kit migrate"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.32.1",
     "express": "^4.19.2",
     "mysql2": "^3.10.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "drizzle-kit": "^0.23.0",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
 }
