server: email password auth and convert to commonjs

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,4 @@
 PORT=4000
 DB_URL=mysql://<username>:<password>@<host>:<port>/<db_name>
+JWT_ACCESS_SECRET=<require('crypto').randomBytes(64).toString('hex')>
+JWT_REFRESH_SECRET=<require('crypto').randomBytes(64).toString('hex')>
